// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should render a Link if path is not an external url 1`] = `
<Col
  className="tile"
  md={3}
  sm={4}
  xs={6}
>
  <Connect(Link)
    to="/augsburg/de/willkommen"
  >
    <div
      className="thumbnailSizer"
    >
      <div
        className="thumbnail"
      >
        <img
          src="https://cms.integreat-ap…03/Beratung-150x150.png"
        />
      </div>
    </div>
    <div
      className="title"
    >
      Willkommen
    </div>
  </Connect(Link)>
</Col>
`;

exports[`Tile should render a a-Tag if path is not an external url 1`] = `
<Col
  className="tile"
  md={3}
  sm={4}
  xs={6}
>
  <a
    href="https://example.com"
    target="_blank"
  >
    <div
      className="thumbnailSizer"
    >
      <div
        className="thumbnail"
      >
        <img
          src="https://cms.integreat-ap…03/Beratung-150x150.png"
        />
      </div>
    </div>
    <div
      className="title"
    >
      Example
    </div>
  </a>
</Col>
`;

exports[`Tile should render a form-Tag if path is not an external url and has postData 1`] = `
<Col
  className="tile"
  md={3}
  sm={4}
  xs={6}
>
  <form
    action="https://example.com"
    method="POST"
    target="_blank"
  >
    <input
      key="plz"
      name="plz"
      type="hidden"
      value="86150"
    />
    <input
      key="radius"
      name="radius"
      type="hidden"
      value="50"
    />
    <input
      key="partner"
      name="partner"
      type="hidden"
      value="0006"
    />
    <button
      type="submit"
    >
      <div
        className="thumbnailSizer"
      >
        <div
          className="thumbnail"
        >
          <img
            src="https://cms.integreat-ap…03/Beratung-150x150.png"
          />
        </div>
      </div>
      <div
        className="title"
      >
        Example
      </div>
    </button>
  </form>
</Col>
`;
